--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
     <groupId>eu.europa.ec.fisheries.uvms</groupId>
     <artifactId>uvms-config</artifactId>
     <packaging>jar</packaging>
-    <version>2.0.6-SNAPSHOT</version>
+    <version>2.0.7-SNAPSHOT</version>
     <name>uvms-config</name>
     <description>UnionVMS configuration management.</description>
 
     <properties>
-        <release.branch.name>uvms-2.0.5-Isildur</release.branch.name>
+        <release.branch.name>uvms-2.0.6-kili</release.branch.name>
         <javaee.version>7.0</javaee.version>
 		<config.model.version>2.0.5</config.model.version>
     </properties>
