--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>eu.europa.ec.fisheries.uvms</groupId>
-    <artifactId>uvms-config</artifactId>
+    <artifactId>uvms-config-WebLogic1-2.1.3</artifactId>
     <packaging>jar</packaging>
     <version>2.0.8-SNAPSHOT</version>
     <name>uvms-config</name>
@@ -10,13 +10,13 @@
     <properties>
         <release.branch.name>uvms-2.0.6-kili</release.branch.name>
         <javaee.version>7.0</javaee.version>
-		<config.model.version>2.0.7</config.model.version>
+        <config.model.version>2.0.7</config.model.version>
         <project.scm.id>github</project.scm.id>
     </properties>
 
     <repositories>
         <repository>
-            <id>focus-repo</id>
+            <id>focus-releases</id>
             <name>Focus nexus repository</name>
             <url>http://nexus.focus.fish/</url>
         </repository>
@@ -37,23 +37,23 @@
 
     <scm>
         <connection>scm:git:https://github.com/UnionVMS/UVMS-UVMSConfigLibrary.git</connection>
-      <tag>HEAD</tag>
-  </scm>
+        <tag>HEAD</tag>
+    </scm>
 
     <dependencies>
-		<dependency>
+        <dependency>
             <groupId>eu.europa.ec.fisheries.uvms.config</groupId>
             <artifactId>config-model</artifactId>
             <version>${config.model.version}</version>
             <scope>compile</scope>
         </dependency>
-		<dependency>
-			<groupId>javax</groupId>
-			<artifactId>javaee-api</artifactId>
-			<scope>provided</scope>
-			<version>${javaee.version}</version>
-		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <scope>provided</scope>
+            <version>${javaee.version}</version>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
