--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>eu.europa.ec.fisheries.uvms</groupId>
     <artifactId>uvms-config_WebLogic-2.1.3_</artifactId>
     <packaging>jar</packaging>
-    <version>2.0.9</version>
+    <version>2.0.9-SNAPSHOT</version>
     <name>uvms-config</name>
     <description>UnionVMS configuration management.</description>
 
@@ -37,7 +37,7 @@
 
     <scm>
         <connection>scm:git:https://github.com/UnionVMS/UVMS-UVMSConfigLibrary.git</connection>
-        <tag>uvms-config_WebLogic-2.1.3_-2.0.9</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <dependencies>
