--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,17 @@
     <groupId>eu.europa.ec.fisheries.uvms</groupId>
     <artifactId>uvms-config</artifactId>
     <packaging>jar</packaging>
-    <version>2.0.8-SNAPSHOT</version>
+    <version>2.1.0-SNAPSHOT</version>
     <name>uvms-config</name>
     <description>UnionVMS configuration management.</description>
 
     <properties>
         <release.branch.name>uvms-2.0.6-kili</release.branch.name>
         <javaee.version>7.0</javaee.version>
-		<config.model.version>2.0.7</config.model.version>
+        <sl4j.version>1.7.7</sl4j.version>
+
+		<config.model.version>2.1.0-SNAPSHOT</config.model.version>
+
         <project.scm.id>github</project.scm.id>
     </properties>
 
@@ -41,6 +44,11 @@
   </scm>
 
     <dependencies>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${sl4j.version}</version>
+        </dependency>
 		<dependency>
             <groupId>eu.europa.ec.fisheries.uvms.config</groupId>
             <artifactId>config-model</artifactId>
