--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
     <description>UnionVMS configuration management.</description>
 
     <properties>
-        <release.branch.name>uvms-2.0.6-kili</release.branch.name>
+        <release.branch.name>uvms-2.1.0-jessamine-boffin</release.branch.name>
         <javaee.version>7.0</javaee.version>
         <sl4j.version>1.7.7</sl4j.version>
 
-		<config.model.version>2.1.0-SNAPSHOT</config.model.version>
+		<config.model.version>2.1.0</config.model.version>
 
         <project.scm.id>github</project.scm.id>
     </properties>
