--- a/pom.xml
+++ b/pom.xml
@@ -3,17 +3,20 @@
     <groupId>eu.europa.ec.fisheries.uvms</groupId>
     <artifactId>uvms-config</artifactId>
     <packaging>jar</packaging>
-    <version>3.0.4</version>
+    <version>3.0.4.1-SNAPSHOT</version>
     <name>uvms-config</name>
     <description>UnionVMS configuration management.</description>
 
+   <parent>
+        <groupId>fish.focus.maven</groupId>
+	    <artifactId>focus-pom</artifactId>
+	    <version>1.5</version>
+        <relativePath />
+    </parent>
     <properties>
-        <release.branch.name>uvms-3.0.1-C3PO</release.branch.name>
         <javaee.version>7.0</javaee.version>
-        <sl4j.version>1.7.7</sl4j.version>
-
+        <sl4j.version>1.7.25</sl4j.version>
 		<config.model.version>2.1.1</config.model.version>
-
         <project.scm.id>github</project.scm.id>
     </properties>
 
@@ -21,7 +24,7 @@
         <repository>
             <id>focus-repo</id>
             <name>Focus nexus repository</name>
-            <url>http://nexus.focus.fish/</url>
+            <url>http://nexus.focus.fish/nexus/</url>
         </repository>
     </repositories>
 
@@ -40,7 +43,7 @@
 
     <scm>
         <connection>scm:git:https://github.com/UnionVMS/UVMS-UVMSConfigLibrary.git</connection>
-      <tag>uvms-config-3.0.4</tag>
+        <tag>HEAD</tag>
   </scm>
 
     <dependencies>
@@ -62,62 +65,4 @@
 			<version>${javaee.version}</version>
 		</dependency>
 	</dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
-                <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-release-plugin</artifactId>
-                <version>2.5.2</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>com.google.code.maven-scm-provider-svnjava</groupId>
-                        <artifactId>maven-scm-provider-svnjava</artifactId>
-                        <version>2.1.1</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.apache.maven.scm</groupId>
-                        <artifactId>maven-scm-provider-gitexe</artifactId>
-                        <version>1.8.1</version>
-                    </dependency>
-                </dependencies>
-                <configuration>
-                    <providerImplementations>
-                        <svn>javasvn</svn>
-                    </providerImplementations>
-                    <tagBase>https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/tags/uvms-config</tagBase>
-                    <tagNameFormat>@{project.artifactId}-@{project.version}</tagNameFormat>
-                    <autoVersionSubmodules>true</autoVersionSubmodules>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-deploy-plugin</artifactId>
-                <version>2.8.1</version>
-                <configuration>
-                    <deployAtEnd>true</deployAtEnd>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>default-deploy</id>
-                        <phase>deploy</phase>
-                        <goals>
-                            <goal>deploy</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
 </project>
