--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>eu.europa.ec.fisheries.uvms</groupId>
     <artifactId>uvms-config</artifactId>
     <packaging>jar</packaging>
-    <version>3.1.0</version>
+    <version>3.1.1-SNAPSHOT</version>
     <name>uvms-config</name>
     <description>UnionVMS configuration management.</description>
 
