--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,14 @@
     <groupId>eu.europa.ec.fisheries.uvms</groupId>
     <artifactId>uvms-config</artifactId>
     <packaging>jar</packaging>
-    <version>3.1.2-SNAPSHOT</version>
+    <version>4.0.0-SNAPSHOT</version>
     <name>uvms-config</name>
     <description>UnionVMS configuration management.</description>
 
     <parent>
         <groupId>fish.focus.maven</groupId>
 	    <artifactId>focus-pom</artifactId>
-	    <version>1.9</version>
+	    <version>1.10</version>
         <relativePath />
     </parent>
 
@@ -20,9 +20,9 @@
         <scm.url>scm:git:https://github.com/UnionVMS/UVMS-UVMSConfigLibrary.git</scm.url>
         
         <javaee.version>7.0</javaee.version>
-        <sl4j.version>1.7.7</sl4j.version>
+        <sl4j.version>1.7.25</sl4j.version>
 
-		<config.model.version>2.1.1</config.model.version>
+		<config.model.version>4.0.0</config.model.version>
 
         <project.scm.id>github</project.scm.id>
     </properties>
@@ -65,6 +65,11 @@
             <version>${config.model.version}</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-lang3</artifactId>
+		    <version>3.6</version>
+		</dependency>		        
 		<dependency>
 			<groupId>javax</groupId>
 			<artifactId>javaee-api</artifactId>
